--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,12 @@
         "php": ">=8.1",
         "maatwebsite/excel": "3.1.58",
         "tymon/jwt-auth": "*"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "AhmedArafat\\AllInOne\\AllInOneServiceProvider"
+            ]
+        }
     }
 }
