--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "maatwebsite/excel": "3.1.58",
+        "maatwebsite/excel": "^3.1.58",
         "tymon/jwt-auth": "*"
     },
     "extra": {
